# flask-masonite-orm

./: .env  .gitignore  pyproject.toml  readme.md
app/: __init__.py  models.py  services.py
app/models/: __init__.py  account.py  application.py  audit_log.py  customer.py  device.py  product_line.py  region.py  status.py  user.py  workflow.py
app/models/mixins/: __init__.py  authenticable.py
app/observers/: __init__.py  application_observer.py  user_observer.py
app/resources/: __init__.py  application_resource.py  customer_resource.py  registration_resource.py
app/routes/: application_flow.py  auth.py
app/services/: resource_fields.py  response.py
config/: database.py
databases/migrations/: 2022_02_18_181902_create_users_table.py  2022_02_18_182004_create_regions_table.py  2022_02_18_190102_create_statuses_table.py  2022_02_18_192005_create_applications_table.py  2022_02_19_102723_create_product_lines_table.py  2022_02_19_102902_create_devices_table.py  2022_02_19_102938_create_workflows_table.py  2022_02_19_103003_create_accounts_table.py  2022_02_19_183808_create_audit_logs_table.py
databases/seeds/: account_table_seeder.py  application_history_table_seeder.py  audit_log_table_seeder.py  device_table_seeder.py  product_line_table_seeder.py  region_table_seeder.py  status_table_seeder.py  workflow_table_seeder.py
docs/app/: index.html
docs/app/models/: application.html  application_history.html  index.html  j1_application.html  user.html
docs/app/models/mixins/: authenticable.html  index.html
docs/app/services/: index.html
